Fix frame align center

--- a/dinamic-close-button-hamburger-menu/style.css
+++ b/dinamic-close-button-hamburger-menu/style.css
@@ -4,18 +4,16 @@
     left: 50%;
     width: 400px;
     height: 400px;
-    margin-top: -200px;
-    margin-left: -200px;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
     border-radius: 15px;
     box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.3);
     background: #896092;
     color: #fff;
 }
 .center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    align-self: center;
 }
 .menu-icon {
     width: 80px;
